fix(webui): new entry dialog not centered on mobile

--- a/webservice/www/new-ui/styles.css
+++ b/webservice/www/new-ui/styles.css
@@ -212,7 +212,7 @@
         }
 
         .sidebar {
-            :not(.sidebar--items):not(.sidebar--items *) {
+            & > div:first-child {
                 position: sticky;
                 left: 0;
             }
